[package]
name = "bridge-parsers"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Read and write bridge file formats (PBN, BWS) with CLI for conversion"

[dependencies]
nom = "8.0"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rust_xlsxwriter = "0.79"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
regex = "1.10"
lazy_static = "1.5"
url = "2.5"
bridge-types = { git = "https://github.com/bridge-craftwork/bridge-types" }
bridge-encodings = { git = "https://github.com/bridge-craftwork/bridge-encodings" }

[dev-dependencies]
tempfile = "3"
